syntax = "proto3";

package notification;

// The job application service definition.
service NotificationService {
    rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse) {}
    rpc GetNotifications (GetUserNotificationsRequest) returns (Notifications) {}
//   rpc CreateJobApplication (CreateJobApplicationRequest) returns (JobApplication) {}
}

// The request message containing the users id.
message User {
    int32 id = 1;
}
message PaginationRequest {
    int32 page = 1;
    int32 limit = 2;
}
message SendNotificationRequest {
    string title = 1;
    string content = 2;
    string link = 3;
    repeated User users = 4;
}

// The response message containing the greetings
message SendNotificationResponse {
    
}

message Notifications {
    repeated Notification notifications = 1;
}

enum status {
    UNREAD = 0;
    READ = 1;
}

message Notification {
    string title = 1;
    string content = 2;
    string link = 3;
    status status = 4;
}

message GetUserNotificationsRequest {
    User user = 1;
    optional PaginationRequest paginationRequest = 2;
}